--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -4,7 +4,7 @@ h1 {
 .content-main {
   height: 100%;
   display: flex;
-  align-items: center;
+  justify-content: center;
   margin: auto;
 }
 .block {
