Added bootstrap using @ng-bootstrap module, and added typed.js support for typewriting effect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar color="primary">Syed Saqlain</mat-toolbar>
-  <main>
-   <app-content></app-content>
-  </main>
+<app-content></app-content>
+<app-about></app-about>
+<app-footer></app-footer>
