--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,6 +1,10 @@
+<div class="main-wrapper">
 <div class="content-main">
-  <div id="block">
-    <h1> I am Syed Saqlain</h1>
-    <span id="typed"></span>
+  <div class="middle">
+    <div class="inner">
+        <h1> I am Syed Saqlain</h1>
+        <span id="typed"></span>
+    </div>
   </div>
+</div>
 </div>
